--- a/css/style.css
+++ b/css/style.css
@@ -70,6 +70,49 @@ main{
         font-size: 50px;
         margin: 20px;
     }
+    /* terza parte */
+    .contenitore2{
+        
+        width: 100%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        padding: 10px;
+       
+    }
+    .radio{
+    }
+        
+    .contenitorepadre{
+        width: 100%;
+        height: 300px;
+        background-color: aqua;
+        border: 1px solid black;
+        display: flex;
+        justify-content: center;
+        padding: 30px;
+       
+    }  
+    .figlio1{
+        width: 20%;
+        height: 100px;
+        background-color: red;
+        border: 1px solid black;
+    }
+    .figlio2{
+        width: 20%;
+        height: 100px;
+        background-color: red;
+        border: 1px solid black;
+    }
+    .figlio3{
+        width: 20%;
+        height: 100px;
+        background-color: red;
+        border: 1px solid black;
+    }
+        
+    
     
 
     
