--- a/css/style.css
+++ b/css/style.css
@@ -94,12 +94,13 @@ main{
     /* terza parte */
 .contenitore2{
     
-    width: 100%;
+    width: 80%;
     display: flex;
     justify-content: center;
     align-items: center;
     padding: 10px;
-    margin-top: 100px;
+    
+    margin: 100px auto 0px;
     
 }
 
@@ -246,11 +247,13 @@ color: blue;
     display: flex;
     justify-content: space-between;
     align-items: center;
-    margin-top: 100px;
+    /* margin-top: 100px; */
+    margin: 0 auto;
 }
     
 .subcontenitore4{
     width: 60%;
+    margin-left: 50px;
     
     
 }  
@@ -261,7 +264,7 @@ color: blue;
     
 }
 .partner{
-    width: 400px;
+    width: 500px;
    
 }  
 .but{
@@ -274,7 +277,20 @@ color: blue;
     font-size: 30px;
 }
 .carattere2{
+    font-size: 15px;
 
+}
+/* sesta parte */
+.contenitore6{
+    width: 80%;
+    margin: 100px auto;
+    
+   
+   
+    
+}
+.contenitore6>h3{
+    text-align: center;
 }
    
     
